--- a/package.json
+++ b/package.json
@@ -1,52 +1,20 @@
 {
-  "name": "metamask-crx",
+  "name": "clearcoin-extension",
   "version": "0.0.0",
   "public": false,
   "private": true,
   "scripts": {
     "start": "gulp dev:extension",
-    "mascara": "gulp dev:mascara & node ./mascara/example/server",
     "dist": "gulp dist",
     "doc": "jsdoc -c development/tools/.jsdoc.json",
     "test": "npm run test:unit && npm run test:integration && npm run lint",
-    "watch:test:unit": "nodemon --exec \"npm run test:unit\" ./test ./app ./ui",
-    "test:unit": "cross-env METAMASK_ENV=test mocha --exit --require test/setup.js --recursive \"test/unit/**/*.js\" \"ui/app/**/*.test.js\" && dot-only-hunter",
-    "test:single": "cross-env METAMASK_ENV=test mocha --require test/helper.js",
-    "test:integration": "npm run test:integration:build && npm run test:flat && npm run test:mascara",
-    "test:integration:build": "gulp build:scss",
-    "test:e2e:chrome": "shell-parallel -s 'npm run ganache:start' -x 'sleep 3 && npm run test:e2e:run:chrome'",
-    "test:e2e:chrome:beta": "SELENIUM_BROWSER=chrome test/e2e/beta/run-all.sh",
-    "test:e2e:firefox": "shell-parallel -s 'npm run ganache:start' -x 'sleep 3 && npm run test:e2e:run:firefox'",
-    "test:e2e:firefox:beta": "SELENIUM_BROWSER=firefox test/e2e/beta/run-all.sh",
-    "test:e2e:run:chrome": "SELENIUM_BROWSER=chrome mocha test/e2e/metamask.spec --bail --recursive",
-    "test:e2e:run:firefox": "SELENIUM_BROWSER=firefox mocha test/e2e/metamask.spec --bail --recursive",
-    "test:screens": "shell-parallel -s 'npm run ganache:start' -x 'sleep 3 && npm run test:screens:run'",
-    "test:screens:run": "node test/screens/new-ui.js",
-    "test:coverage": "nyc npm run test:unit && npm run test:coveralls-upload",
-    "test:coveralls-upload": "if [ $COVERALLS_REPO_TOKEN ]; then nyc report --reporter=text-lcov | coveralls; fi",
-    "test:flat": "npm run test:flat:build && karma start test/flat.conf.js",
-    "test:flat:build": "npm run test:flat:build:ui && npm run test:flat:build:tests && npm run test:flat:build:locales",
-    "test:flat:build:tests": "node test/integration/index.js",
-    "test:flat:build:states": "node development/genStates.js",
-    "test:flat:build:locales": "mkdirp dist/chrome && cp -R app/_locales dist/chrome/_locales",
-    "test:flat:build:ui": "npm run test:flat:build:states && browserify ./development/mock-dev.js -o ./development/bundle.js",
-    "test:mascara": "npm run test:mascara:build && karma start test/mascara.conf.js",
-    "test:mascara:build": "mkdirp dist/mascara && npm run test:mascara:build:ui && npm run test:mascara:build:background && npm run test:mascara:build:tests && npm run test:mascara:build:locales",
-    "test:mascara:build:ui": "browserify mascara/test/test-ui.js -o dist/mascara/ui.js",
-    "test:mascara:build:locales": "mkdirp dist/chrome && cp -R app/_locales dist/chrome/_locales",
-    "test:mascara:build:background": "browserify mascara/src/background.js -o dist/mascara/background.js",
-    "test:mascara:build:tests": "browserify test/integration/lib/first-time.js -o dist/mascara/tests.js",
     "ganache:start": "ganache-cli -m 'phrase upgrade clock rough situate wedding elder clever doctor stamp excess tent'",
     "sentry:publish": "node ./development/sentry-publish.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "ui": "npm run test:flat:build:states && beefy development/ui-dev.js:bundle.js --live --open --index=./development/index.html --cwd ./",
     "mock": "beefy development/mock-dev.js:bundle.js --live --open --index=./development/index.html --cwd ./",
-    "watch": "mocha watch --recursive \"test/unit/**/*.js\"",
-    "disc": "gulp disc --debug",
-    "announce": "node development/announcer.js",
-    "version:bump": "node development/run-version-bump.js",
-    "storybook": "start-storybook -p 6006 -c .storybook"
+    "watch": "mocha watch --recursive \"test/unit/**/*.js\""
   },
   "browserify": {
     "transform": [
