--- a/package.json
+++ b/package.json
@@ -1,20 +1,55 @@
 {
-  "name": "clearcoin-extension",
+  "name": "metamask-crx",
   "version": "0.0.0",
   "public": false,
   "private": true,
   "scripts": {
     "start": "gulp dev:extension",
+    "mascara": "gulp dev:mascara & node ./mascara/example/server",
     "dist": "gulp dist",
     "doc": "jsdoc -c development/tools/.jsdoc.json",
+    "publish-docs": "gh-pages -d docs/jsdocs",
     "test": "npm run test:unit && npm run test:integration && npm run lint",
-    "ganache:start": "ganache-cli -m 'phrase upgrade clock rough situate wedding elder clever doctor stamp excess tent'",
+    "watch:test:unit": "nodemon --exec \"npm run test:unit\" ./test ./app ./ui",
+    "test:unit": "cross-env METAMASK_ENV=test mocha --exit --require test/setup.js --recursive \"test/unit/**/*.js\" \"ui/app/**/*.test.js\"",
+    "test:single": "cross-env METAMASK_ENV=test mocha --require test/helper.js",
+    "test:integration": "npm run test:integration:build && npm run test:flat && npm run test:mascara",
+    "test:integration:build": "gulp build:scss",
+    "test:e2e:chrome": "shell-parallel -s 'npm run ganache:start' -x 'sleep 3 && npm run test:e2e:run:chrome'",
+    "test:e2e:drizzle:beta": "SELENIUM_BROWSER=chrome test/e2e/beta/run-drizzle.sh",
+    "test:e2e:chrome:beta": "SELENIUM_BROWSER=chrome test/e2e/beta/run-all.sh",
+    "test:e2e:firefox": "shell-parallel -s 'npm run ganache:start' -x 'sleep 3 && npm run test:e2e:run:firefox'",
+    "test:e2e:firefox:beta": "SELENIUM_BROWSER=firefox test/e2e/beta/run-all.sh",
+    "test:e2e:run:chrome": "SELENIUM_BROWSER=chrome mocha test/e2e/metamask.spec --bail --recursive",
+    "test:e2e:run:firefox": "SELENIUM_BROWSER=firefox mocha test/e2e/metamask.spec --bail --recursive",
+    "test:screens": "shell-parallel -s 'npm run ganache:start' -x 'sleep 3 && npm run test:screens:run'",
+    "test:screens:run": "node test/screens/new-ui.js",
+    "test:coverage": "nyc --reporter=text --reporter=html npm run test:unit && npm run test:coveralls-upload",
+    "test:coveralls-upload": "if [ $COVERALLS_REPO_TOKEN ]; then nyc report --reporter=text-lcov | coveralls; fi",
+    "test:flat": "npm run test:flat:build && karma start test/flat.conf.js",
+    "test:flat:build": "npm run test:flat:build:ui && npm run test:flat:build:tests && npm run test:flat:build:locales",
+    "test:flat:build:tests": "node test/integration/index.js",
+    "test:flat:build:states": "node development/genStates.js",
+    "test:flat:build:locales": "mkdirp dist/chrome && cp -R app/_locales dist/chrome/_locales",
+    "test:flat:build:ui": "npm run test:flat:build:states && browserify ./development/mock-dev.js -o ./development/bundle.js",
+    "test:mascara": "npm run test:mascara:build && karma start test/mascara.conf.js",
+    "test:mascara:build": "mkdirp dist/mascara && npm run test:mascara:build:ui && npm run test:mascara:build:background && npm run test:mascara:build:tests && npm run test:mascara:build:locales",
+    "test:mascara:build:ui": "browserify mascara/test/test-ui.js -o dist/mascara/ui.js",
+    "test:mascara:build:locales": "mkdirp dist/chrome && cp -R app/_locales dist/chrome/_locales",
+    "test:mascara:build:background": "browserify mascara/src/background.js -o dist/mascara/background.js",
+    "test:mascara:build:tests": "browserify test/integration/lib/first-time.js -o dist/mascara/tests.js",
+    "ganache:start": "ganache-cli --noVMErrorsOnRPCResponse -m 'phrase upgrade clock rough situate wedding elder clever doctor stamp excess tent'",
     "sentry:publish": "node ./development/sentry-publish.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
+    "mozilla-lint": "addons-linter dist/firefox",
     "ui": "npm run test:flat:build:states && beefy development/ui-dev.js:bundle.js --live --open --index=./development/index.html --cwd ./",
     "mock": "beefy development/mock-dev.js:bundle.js --live --open --index=./development/index.html --cwd ./",
-    "watch": "mocha watch --recursive \"test/unit/**/*.js\""
+    "watch": "mocha watch --recursive \"test/unit/**/*.js\"",
+    "disc": "gulp disc --debug",
+    "announce": "node development/announcer.js",
+    "version:bump": "node development/run-version-bump.js",
+    "storybook": "start-storybook -p 6006 -c .storybook"
   },
   "browserify": {
     "transform": [
@@ -25,7 +60,11 @@
             [
               "env",
               {
-                "debug": true
+                "browsers": [
+                  ">0.25%",
+                  "not ie 11",
+                  "not op_mini all"
+                ]
               }
             ],
             "stage-0"
@@ -43,7 +82,7 @@
   },
   "dependencies": {
     "@material-ui/core": "1.0.0",
-    "@zxing/library": "^0.7.0",
+    "@zxing/library": "^0.8.0",
     "abi-decoder": "^1.0.9",
     "asmcrypto.js": "0.22.0",
     "async": "^2.5.0",
@@ -62,7 +101,7 @@
     "copy-to-clipboard": "^3.0.8",
     "css-loader": "^0.28.11",
     "currency-formatter": "^1.4.2",
-    "debounce": "^1.0.0",
+    "debounce": "1.1.0",
     "debounce-stream": "^2.0.0",
     "deep-extend": "^0.5.1",
     "detect-node": "^2.0.3",
@@ -73,16 +112,19 @@
     "ensnare": "^1.0.0",
     "eslint-plugin-react": "^7.4.0",
     "eth-bin-to-ops": "^1.0.1",
+    "eth-block-tracker": "^4.0.3",
     "eth-contract-metadata": "github:MetaMask/eth-contract-metadata#master",
     "eth-ens-namehash": "^2.0.8",
     "eth-hd-keyring": "^1.2.2",
-    "eth-json-rpc-filters": "^1.2.6",
+    "eth-json-rpc-filters": "^3.0.1",
     "eth-json-rpc-infura": "^3.0.0",
+    "eth-keyring-controller": "^3.1.4",
+    "eth-ledger-bridge-keyring": "^0.1.0",
     "eth-method-registry": "^1.0.0",
     "eth-phishing-detect": "^1.1.4",
     "eth-query": "^2.1.2",
-    "eth-sig-util": "^1.4.2",
-    "eth-token-tracker": "^1.1.4",
+    "eth-sig-util": "^2.0.2",
+    "eth-token-tracker": "^1.1.5",
     "eth-trezor-keyring": "^0.1.0",
     "ethereumjs-abi": "^0.6.4",
     "ethereumjs-tx": "^1.3.0",
@@ -95,39 +137,42 @@
     "ethjs-query": "^0.3.4",
     "express": "^4.15.5",
     "extension-link-enabler": "^1.0.0",
+    "extension-port-stream": "^1.0.0",
     "extensionizer": "^1.0.1",
     "fast-json-patch": "^2.0.4",
     "fast-levenshtein": "^2.0.6",
     "file-loader": "^1.1.11",
     "fuse.js": "^3.2.0",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "github:gulpjs/gulp#v4.0.0",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-debug": "^3.2.0",
     "gulp-eslint": "^4.0.0",
     "gulp-sass": "^4.0.0",
     "hat": "0.0.3",
-    "human-standard-token-abi": "^1.0.2",
+    "human-standard-token-abi": "^2.0.0",
     "idb-global": "^2.1.0",
     "identicon.js": "^2.3.1",
     "iframe": "^1.0.0",
     "iframe-stream": "^3.0.0",
     "inject-css": "^0.1.1",
     "jazzicon": "^1.2.0",
-    "json-rpc-engine": "^3.6.1",
-    "json-rpc-middleware-stream": "^1.0.1",
+    "json-rpc-engine": "^3.8.0",
+    "json-rpc-middleware-stream": "^2.1.0",
+    "jsonschema": "^1.2.4",
     "lodash.debounce": "^4.0.8",
     "lodash.memoize": "^4.1.2",
     "lodash.shuffle": "^4.2.0",
     "lodash.uniqby": "^4.7.0",
     "loglevel": "^1.4.1",
     "metamascara": "^2.0.0",
+    "metamask-inpage-provider": "^1.2.2",
     "metamask-logo": "^2.1.4",
     "mkdirp": "^0.5.1",
     "multihashes": "^0.4.12",
     "multiplex": "^6.7.0",
     "number-to-bn": "^1.7.0",
     "obj-multiplex": "^1.0.0",
-    "obs-store": "^3.0.0",
+    "obs-store": "^3.0.2",
     "percentile": "^1.2.0",
     "pify": "^3.0.0",
     "ping-pong-stream": "^1.0.0",
@@ -146,14 +191,15 @@
     "react-addons-css-transition-group": "^15.6.0",
     "react-dom": "^15.6.2",
     "react-hyperscript": "^3.0.0",
+    "react-inspector": "^2.3.0",
     "react-markdown": "^3.0.0",
+    "react-media": "^1.8.0",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.2.2",
     "react-select": "^1.0.0",
     "react-simple-file-input": "^2.0.0",
     "react-tippy": "^1.2.2",
     "react-toggle-button": "^2.2.0",
-    "react-multi-toggle": "^1.1.0",
     "react-tooltip-component": "^0.3.0",
     "react-transition-group": "^2.2.1",
     "react-trigger-change": "^1.0.2",
@@ -171,11 +217,11 @@
     "shallow-copy": "0.0.1",
     "sw-controller": "^1.0.3",
     "sw-stream": "^2.0.2",
+    "swappable-obj-proxy": "^1.1.0",
     "textarea-caret": "^3.0.1",
     "valid-url": "^1.0.9",
     "vreme": "^3.0.2",
     "web3": "^0.20.1",
-    "web3-provider-engine": "^14.0.5",
     "web3-stream-provider": "^3.0.1",
     "webrtc-adapter": "^6.3.0",
     "xtend": "^4.0.1"
@@ -185,6 +231,7 @@
     "@storybook/addon-info": "^3.4.2",
     "@storybook/addon-knobs": "^3.4.2",
     "@storybook/react": "^3.4.2",
+    "addons-linter": "^1.3.4",
     "babel-core": "^6.24.1",
     "babel-eslint": "^8.0.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -207,17 +254,18 @@
     "css-loader": "^0.28.11",
     "deep-freeze-strict": "^1.1.1",
     "del": "^3.0.0",
-    "dot-only-hunter": "^1.0.3",
     "envify": "^4.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-15": "^1.0.5",
+    "enzyme": "^3.4.4",
+    "enzyme-adapter-react-15": "^1.0.6",
     "eslint-plugin-chai": "0.0.1",
     "eslint-plugin-json": "^1.2.0",
     "eslint-plugin-mocha": "^5.0.0",
     "eslint-plugin-react": "^7.4.0",
-    "eth-json-rpc-middleware": "^1.6.0",
+    "eth-json-rpc-middleware": "^3.1.3",
     "eth-keyring-controller": "^3.3.1",
+    "fetch-mock": "^6.5.2",
     "file-loader": "^1.1.11",
+    "fs-extra": "^6.0.1",
     "fs-promise": "^2.0.3",
     "ganache-cli": "^6.1.0",
     "ganache-core": "^2.1.5",
@@ -262,6 +310,7 @@
     "open": "0.0.5",
     "path": "^0.12.7",
     "png-file-stream": "^1.0.0",
+    "prepend-file": "^1.3.1",
     "prompt": "^1.0.0",
     "proxyquire": "2.0.1",
     "qs": "^6.2.0",
